Bug 1169093 - Do not use HWC when a region of layer is too small r=mattwoodrow