widget/gonk/HwcUtils.cpp
@@ -96,13 +96,18 @@ HwcUtils::PrepareVisibleRegion(const nsIntRegion& aVisible,
                                const gfx::Matrix& aLayerTransform,
                                const gfx::Matrix& aLayerBufferTransform,
                                nsIntRect aClip, nsIntRect aBufferRect,
-                               RectVector* aVisibleRegionScreen) {
+                               RectVector* aVisibleRegionScreen,
+                               bool& aIsVisible) {
+    const float MIN_SRC_WIDTH = 2.f;
+    const float MIN_SRC_HEIGHT = 2.f;
 
     gfxMatrix layerTransform = gfx::ThebesMatrix(aLayerTransform);
     gfxMatrix layerBufferTransform = gfx::ThebesMatrix(aLayerBufferTransform);
     gfxRect bufferRect = layerBufferTransform.TransformBounds(aBufferRect);
+    gfxMatrix inverse = gfx::ThebesMatrix(aLayerBufferTransform);
+    inverse.Invert();
     nsIntRegionRectIterator rect(aVisible);
-    bool isVisible = false;
+    aIsVisible = false;
     while (const nsIntRect* visibleRect = rect.Next()) {
         hwc_rect_t visibleRectScreen;
         gfxRect screenRect;
@@ -118,11 +123,19 @@ HwcUtils::PrepareVisibleRegion(const nsIntRegion& aVisible,
         visibleRectScreen.top  = screenRect.y;
         visibleRectScreen.right  = screenRect.XMost();
         visibleRectScreen.bottom = screenRect.YMost();
+
+        gfxRect srcCrop = inverse.TransformBounds(screenRect);
+        // When src crop is very small, HWC could not render correctly in some cases.
+        // See Bug 1169093
+        if(srcCrop.Width() < MIN_SRC_WIDTH || srcCrop.Height() < MIN_SRC_HEIGHT) {
+            return false;
+        }
+
         aVisibleRegionScreen->push_back(visibleRectScreen);
-        isVisible = true;
+        aIsVisible = true;
     }
 
-    return isVisible;
+    return true;
 }
 
 /* static */ bool
